feat: update site favicon and clean up meta tags in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SafiLocate | Smart Lost & Found Platform Rwanda</title>
 
     <meta property="og:title" content="SafiLocate – Smart Lost & Found Platform" />
     <meta property="og:description" content="Report lost items, find found items, and connect securely. The smart lost & found platform for Rwanda." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo_1765378962941.png" />
+    <meta property="og:image" content="/favicon.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="SafiLocate – Smart Lost & Found Platform" />
     <meta name="twitter:description" content="Report lost items, find found items, and connect securely. The smart lost & found platform for Rwanda." />
-    <meta name="twitter:image" content="/logo_1765378962941.png" />
+    <meta name="twitter:image" content="/favicon.png" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
